# Soft-Robot-World-Model

./: .gitignore  LICENSE  README.md  animate_3d_sequence.py  check_indices.py  custom_inference.py  decoder.py  encoder.py  encoder_mini.py  encoder_resnet_gn.py  evaluate_3d_hysteresis.py  extract_3d_mesh.py  inference.py  inference_2d_video.py  inference_2d_video_validation.py  inference_3d_sequence.py  inference_cross.py  inference_custom.py  inference_custom_control.py  inference_validation_set.py  multiview_dataset.py  orthographic_ray_generator.py  plot_losses.py  pyproject.toml  requirements.txt  temporal_dynamics.py  train.py  triplane_encoder.py  triplane_encoder_resnet.py  visualization_helper.py  volumetric_ray_marcher.py
src/: encoder.py  multiview_dataset.py  orthographic_ray_generator.py  renderer.py  temporal_dynamics.py
src/inference/: inference_cross.py  inference_custom.py  inference_validation.py  inference_validation_set.py  simulator.py
src/utils/: clear_old_cache.sh  visualize_dataset.py
utils/: fft_analysis.py
