[project]
name = "softrobot-worldmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.4.0",
    "addict==2.4.0",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "configargparse==1.7.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dash==4.0.0",
    "fastjsonschema==2.21.2",
    "filelock==3.24.3",
    "flask==3.1.3",
    "fonttools==4.61.1",
    "fsspec==2026.2.0",
    "grpcio==1.78.0",
    "idna==3.11",
    "imageio==2.37.2",
    "importlib-metadata==8.7.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "lightning-utilities==0.15.3",
    "lpips==0.1.4",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "narwhals==2.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "open3d==0.19.0",
    "opencv-python==4.13.0.92",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "pip==26.0.1",
    "platformdirs==4.9.2",
    "plotly==6.6.0",
    "protobuf==7.34.0",
    "pyparsing==3.3.2",
    "pyquaternion==0.9.9",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "retrying==1.4.2",
    "rpds-py==0.30.0",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==81.0.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "tifffile==2026.2.24",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "trimesh==4.11.2",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "werkzeug==3.1.6",
    "zipp==3.23.0",
]
